upgrade to tycho 4.0.4